frontend/test/should_pass/exectype_AssignSetmapEmptyToVarUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(b=y.empty());
	}
}