frontend/test/should_fail/exectype_AssignSetmapSizeToVar4.grg
using exectype;

rule r
{
	modify  {
		exec(y:map<AA,HH> =map<AA,HH> ;> i:boolean=y.size());
	}
}